--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -109,7 +109,6 @@ allow 109.70.100.69;
 allow 109.70.100.70;
 allow 109.70.100.71;
 allow 114.199.75.111;
-allow 118.163.74.160;
 allow 123.253.35.32;
 allow 125.212.241.131;
 allow 128.31.0.13;
@@ -178,6 +177,7 @@ allow 172.104.182.84;
 allow 172.104.214.41;
 allow 172.232.161.205;
 allow 172.81.131.156;
+allow 172.81.131.84;
 allow 173.232.195.137;
 allow 173.232.195.144;
 allow 173.232.195.146;
@@ -185,6 +185,7 @@ allow 173.249.57.253;
 allow 173.255.255.215;
 allow 175.214.127.6;
 allow 176.118.193.33;
+allow 176.121.81.51;
 allow 176.126.253.190;
 allow 176.58.100.98;
 allow 176.58.121.177;
@@ -255,6 +256,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -801,7 +803,6 @@ allow 2001:67c:89c:702:1ce:1ce:babe:9;
 allow 2001:780:107:b::85;
 allow 2001:910:1400:107::2;
 allow 2001:9b1:c300:3044::610;
-allow 2001:b030:2422::7234;
 allow 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 allow 2001:bc8:1600:472a::1;
 allow 2001:bc8:700:9212::1;
@@ -900,6 +901,7 @@ allow 23.137.248.139;
 allow 23.137.248.152;
 allow 23.137.248.69;
 allow 23.137.249.143;
+allow 23.137.249.150;
 allow 23.137.249.185;
 allow 23.137.249.8;
 allow 23.137.250.34;
@@ -931,10 +933,8 @@ allow 23.154.177.7;
 allow 23.154.177.8;
 allow 23.154.177.9;
 allow 23.155.24.6;
-allow 23.155.24.7;
 allow 23.184.48.127;
 allow 23.184.48.128;
-allow 23.21.226.52;
 allow 23.94.211.25;
 allow 23.94.36.142;
 allow 2401:c080:2000:111f:5400:4ff:fea3:9c02;
@@ -950,9 +950,10 @@ allow 2.58.56.90;
 allow 2600:3c00:e000:4ee::3;
 allow 2600:3c00::f03c:91ff:fe96:1cd9;
 allow 2600:3c03:e000:fa::1;
+allow 2600:3c03::f03c:91ff:fe24:47be;
 allow 2600:3c03::f03c:94ff:fed1:8c69;
 allow 2602:2e6:0:6::;
-allow 2602:2e6:0:7::;
+allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:4441::1;
 allow 2602:fc24:11:96f9::1;
 allow 2602:fc24:11:aabe::1;
@@ -1257,6 +1258,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1565,6 +1567,7 @@ allow 45.66.35.10;
 allow 45.66.35.20;
 allow 45.66.35.21;
 allow 45.66.35.35;
+allow 45.79.144.222;
 allow 45.79.177.21;
 allow 45.79.50.161;
 allow 45.80.158.205;
@@ -1615,6 +1618,7 @@ allow 51.91.18.151;
 allow 5.196.73.12;
 allow 5.196.8.113;
 allow 5.196.95.34;
+allow 52.1.155.59;
 allow 5.255.100.126;
 allow 5.255.100.219;
 allow 5.255.100.26;
@@ -1693,6 +1697,7 @@ allow 82.153.138.79;
 allow 82.221.128.191;
 allow 82.221.131.5;
 allow 82.221.131.71;
+allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
 allow 83.97.20.77;
@@ -1704,6 +1709,7 @@ allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
+allow 85.204.116.211;
 allow 85.204.116.88;
 allow 85.215.76.62;
 allow 85.93.218.204;
@@ -1739,6 +1745,7 @@ allow 89.58.41.251;
 allow 89.58.63.200;
 allow 91.103.253.141;
 allow 91.132.144.59;
+allow 91.139.160.150;
 allow 91.206.26.26;
 allow 91.208.197.144;
 allow 91.208.75.153;
