--- a/deny-tor_ips_v6.conf
+++ b/deny-tor_ips_v6.conf
@@ -116,7 +116,6 @@ deny 2001:67c:89c:702:1ce:1ce:babe:9;
 deny 2001:780:107:b::85;
 deny 2001:910:1400:107::2;
 deny 2001:9b1:c300:3044::610;
-deny 2001:b030:2422::7234;
 deny 2001:bc8:1201:608:46a8:42ff:fe3d:2743;
 deny 2001:bc8:1600:472a::1;
 deny 2001:bc8:700:9212::1;
@@ -127,9 +126,10 @@ deny 2402:1f00:8100:400::9;
 deny 2600:3c00:e000:4ee::3;
 deny 2600:3c00::f03c:91ff:fe96:1cd9;
 deny 2600:3c03:e000:fa::1;
+deny 2600:3c03::f03c:91ff:fe24:47be;
 deny 2600:3c03::f03c:94ff:fed1:8c69;
 deny 2602:2e6:0:6::;
-deny 2602:2e6:0:7::;
+deny 2602:fc24:11:26c3::1;
 deny 2602:fc24:11:4441::1;
 deny 2602:fc24:11:96f9::1;
 deny 2602:fc24:11:aabe::1;
@@ -433,6 +433,7 @@ deny 2a06:1700:0:15::2;
 deny 2a06:1700:0:15::3;
 deny 2a06:1700:0:15::4;
 deny 2a06:1700:0:16::1;
+deny 2a06:1700:0:16b::11;
 deny 2a06:1700:0:3c::1;
 deny 2a06:1700:0:50::11;
 deny 2a06:1700:3:19::1;
