--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -1,5 +1,4 @@
 allow 102.130.113.9;
-allow 102.130.123.16;
 allow 102.130.127.117;
 allow 102.219.85.85;
 allow 103.106.3.94;
@@ -194,6 +193,7 @@ allow 176.58.100.98;
 allow 176.58.121.177;
 allow 176.58.89.182;
 allow 178.170.37.11;
+allow 178.17.170.184;
 allow 178.17.170.23;
 allow 178.17.171.102;
 allow 178.17.174.14;
@@ -240,6 +240,7 @@ allow 185.106.94.195;
 allow 185.107.70.56;
 allow 185.112.146.168;
 allow 185.113.128.30;
+allow 185.126.117.21;
 allow 185.129.61.1;
 allow 185.129.61.10;
 allow 185.129.61.129;
@@ -259,13 +260,13 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
-allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
 allow 185.154.110.17;
 allow 185.165.169.239;
 allow 185.165.171.84;
+allow 185.165.190.111;
 allow 185.170.114.25;
 allow 185.174.136.114;
 allow 185.181.60.135;
@@ -709,6 +710,7 @@ allow 2001:41d0:701:1100::4434;
 allow 2001:41d0:701:1100::4f60;
 allow 2001:41d0:800:1f70::;
 allow 2001:41d0:801:2000::15bb;
+allow 2001:41d0:a:5c0::1;
 allow 2001:41d0:a:fe22::1;
 allow 2001:41d0:e:70c::1;
 allow 2001:470:1:908::9001;
@@ -1122,6 +1124,7 @@ allow 2a00:1b88:4::2;
 allow 2a00:1b88:4::4;
 allow 2a00:1dc0:caff:138::94d2;
 allow 2a00:1dc0:caff:15::45dc;
+allow 2a00:1dc0:caff:178::982b;
 allow 2a00:1dc0:caff:73::d735;
 allow 2a00:1dc0:caff:8b::24bd;
 allow 2a00:99a0:0:1000::2;
@@ -1263,7 +1266,6 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
-allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1511,18 +1513,19 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 3.229.174.26;
 allow 35.0.127.52;
 allow 37.1.201.144;
 allow 37.120.166.23;
 allow 37.120.188.156;
 allow 37.120.239.59;
+allow 37.187.5.192;
 allow 37.228.129.128;
 allow 37.228.129.63;
 allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 3.93.228.58;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
