--- a/allow-tor_ips.conf
+++ b/allow-tor_ips.conf
@@ -138,6 +138,7 @@ allow 149.202.79.129;
 allow 149.56.22.133;
 allow 149.56.44.47;
 allow 151.80.148.159;
+allow 152.89.233.169;
 allow 154.16.116.61;
 allow 155.4.102.252;
 allow 160.119.249.240;
@@ -204,6 +205,7 @@ allow 178.20.55.16;
 allow 178.20.55.182;
 allow 178.218.144.51;
 allow 178.218.144.64;
+allow 178.218.144.96;
 allow 178.236.247.122;
 allow 179.43.128.16;
 allow 179.43.159.194;
@@ -257,6 +259,7 @@ allow 185.130.47.58;
 allow 185.141.147.128;
 allow 185.142.239.49;
 allow 185.146.232.234;
+allow 185.146.232.243;
 allow 185.14.97.37;
 allow 185.153.197.227;
 allow 185.154.110.142;
@@ -544,6 +547,7 @@ allow 188.68.52.231;
 allow 189.147.225.232;
 allow 190.103.179.98;
 allow 190.120.229.98;
+allow 190.211.254.97;
 allow 191.101.31.10;
 allow 191.96.165.34;
 allow 192.210.255.181;
@@ -832,7 +836,6 @@ allow 208.109.215.188;
 allow 208.109.36.224;
 allow 209.141.32.198;
 allow 209.141.38.110;
-allow 209.141.45.167;
 allow 209.141.46.203;
 allow 209.141.50.178;
 allow 209.141.51.180;
@@ -897,7 +900,6 @@ allow 23.129.64.229;
 allow 23.137.248.100;
 allow 23.137.248.139;
 allow 23.137.248.152;
-allow 23.137.248.69;
 allow 23.137.249.150;
 allow 23.137.249.227;
 allow 23.137.249.8;
@@ -908,7 +910,6 @@ allow 23.152.24.77;
 allow 23.154.177.10;
 allow 23.154.177.11;
 allow 23.154.177.12;
-allow 23.154.177.13;
 allow 23.154.177.14;
 allow 23.154.177.15;
 allow 23.154.177.16;
@@ -952,7 +953,6 @@ allow 2602:fc24:11:26c3::1;
 allow 2602:fc24:11:66c4::1;
 allow 2602:fc24:11:aabe::1;
 allow 2602:fc24:12:4870:39ca:318:0:1;
-allow 2602:fc24:12:759::1;
 allow 2602:fc24:12:77c0::1;
 allow 2602:fc24:12:81a6::1;
 allow 2602:fc24:12:a679::1;
@@ -1221,6 +1221,7 @@ allow 2a04:52c0:116:e0e3::1;
 allow 2a04:52c0:120:a13d::1;
 allow 2a04:52c0:130:896e::1;
 allow 2a04:52c0:130:d285::1;
+allow 2a04:9dc0:31::c0cc:4d;
 allow 2a05:26c0:d1:12:acdc:feed:beef:66;
 allow 2a05:26c0:d1:12:acdc:feed:beef:99;
 allow 2a05:541:110:20::1;
@@ -1232,6 +1233,7 @@ allow 2a05:b0c7:67b0::1;
 allow 2a05:b0c7:67bb::1;
 allow 2a05:b0c7:67c6::1;
 allow 2a05:b0c7:6841::1;
+allow 2a05:b0c7:6949::1;
 allow 2a05:b0c7:696c::1;
 allow 2a05:b0c7:6978::1;
 allow 2a05:b0c7:6b6c::1;
@@ -1249,6 +1251,7 @@ allow 2a06:1700:0:15::2;
 allow 2a06:1700:0:15::3;
 allow 2a06:1700:0:15::4;
 allow 2a06:1700:0:16::1;
+allow 2a06:1700:0:16b::11;
 allow 2a06:1700:0:3c::1;
 allow 2a06:1700:0:50::11;
 allow 2a06:1700:3:19::1;
@@ -1497,6 +1500,7 @@ allow 31.129.22.65;
 allow 31.220.87.46;
 allow 31.220.98.139;
 allow 31.42.185.134;
+allow 34.198.41.62;
 allow 35.0.127.52;
 allow 35.240.241.135;
 allow 37.1.201.144;
@@ -1510,8 +1514,6 @@ allow 37.48.120.196;
 allow 37.48.70.156;
 allow 38.242.254.131;
 allow 38.97.116.244;
-allow 42.116.248.245;
-allow 44.209.207.252;
 allow 45.12.3.80;
 allow 45.128.232.151;
 allow 45.130.20.250;
@@ -1615,7 +1617,6 @@ allow 5.196.8.113;
 allow 5.196.95.34;
 allow 5.255.100.126;
 allow 5.255.100.219;
-allow 5.255.100.26;
 allow 5.255.101.10;
 allow 5.255.101.131;
 allow 5.255.103.190;
@@ -1695,10 +1696,12 @@ allow 82.221.131.71;
 allow 82.221.139.190;
 allow 83.217.9.73;
 allow 83.96.213.63;
+allow 83.97.20.77;
 allow 84.16.224.227;
 allow 84.211.225.54;
 allow 84.239.46.144;
 allow 84.247.165.51;
+allow 84.54.51.61;
 allow 84.54.51.68;
 allow 84.54.51.69;
 allow 85.17.9.83;
